[gd_scene load_steps=20 format=2]

[ext_resource path="res://Characters/character_0001.png" type="Texture" id=1]
[ext_resource path="res://Tilemap/tiles_packed.png" type="Texture" id=2]
[ext_resource path="res://Characters/character_0000.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PlayerScripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Scripts/LevelScripts/Level.gd" type="Script" id=5]
[ext_resource path="res://Scripts/GameScripts/Gravityfield.gd" type="Script" id=6]
[ext_resource path="res://Scripts/PlayerScripts/state_manager.gd" type="Script" id=7]
[ext_resource path="res://Scripts/PlayerScripts/idle.gd" type="Script" id=8]
[ext_resource path="res://Scripts/PlayerScripts/jump.gd" type="Script" id=9]
[ext_resource path="res://Scripts/PlayerScripts/run.gd" type="Script" id=10]
[ext_resource path="res://Scripts/PlayerScripts/fall.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 6.0

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 18, 18, 0, 18, 0, 0, 18, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 18, 18, 0, 18, 0, 0, 18, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 18, 18, 0, 18, 0, 0, 18, 0 )

[sub_resource type="TileSet" id=6]
0/name = "tiles_packed.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 18, 0, 18, 18 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "tiles_packed.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 36, 0, 18, 18 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 4 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "tiles_packed.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 54, 0, 18, 18 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 5 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 387, 16 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 37.25, 74.75 )

[node name="Level" type="Node2D"]
position = Vector2( 273, 280 )
script = ExtResource( 5 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 27, 57 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 1 )
animation = "Walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 2 )

[node name="state_manager" type="Node" parent="Player"]
script = ExtResource( 7 )

[node name="idle" type="Node" parent="Player/state_manager"]
script = ExtResource( 8 )

[node name="run" type="Node" parent="Player/state_manager"]
script = ExtResource( 10 )

[node name="jump" type="Node" parent="Player/state_manager"]
script = ExtResource( 9 )

[node name="fall" type="Node" parent="Player/state_manager"]
script = ExtResource( 11 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 18, 18 )
format = 1
tile_data = PoolIntArray( 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0 )

[node name="Restart" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Restart"]
position = Vector2( 192, 138 )
shape = SubResource( 7 )

[node name="GravityFieldList" type="Node2D" parent="."]

[node name="Gravityfield" type="Area2D" parent="GravityFieldList"]
position = Vector2( 29, -81 )
gravity_vec = Vector2( 0, 0 )
script = ExtResource( 6 )
field_gravity = -15

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityFieldList/Gravityfield"]
position = Vector2( 255, 76 )
shape = SubResource( 8 )

[node name="Gravityfield2" type="Area2D" parent="GravityFieldList"]
position = Vector2( -130, -80 )
gravity_vec = Vector2( 0, 0 )
script = ExtResource( 6 )
field_gravity = -7

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityFieldList/Gravityfield2"]
position = Vector2( 250, 74 )
shape = SubResource( 8 )

[connection signal="body_entered" from="Restart" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="GravityFieldList/Gravityfield" to="Player" method="_on_Gravityfield_body_entered"]
[connection signal="body_exited" from="GravityFieldList/Gravityfield" to="Player" method="_on_Gravityfield_body_exited" binds= [ -13 ]]
[connection signal="body_entered" from="GravityFieldList/Gravityfield2" to="Player" method="_on_Gravityfield_body_entered"]
[connection signal="body_exited" from="GravityFieldList/Gravityfield2" to="Player" method="_on_Gravityfield_body_exited" binds= [ -13 ]]
